--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
     <id>com.github.fiskirton.gitlabciplugin</id>
-    <name>GitlabCI-plugin</name>
+    <name>GitlabCI-Workflow</name>
     <vendor>fiskirton</vendor>
 
     <depends>com.intellij.modules.platform</depends>
@@ -9,10 +9,24 @@
     <extensions defaultExtensionNs="com.intellij">
         <applicationService serviceImplementation="com.github.fiskirton.gitlabciplugin.services.MyApplicationService"/>
         <projectService serviceImplementation="com.github.fiskirton.gitlabciplugin.services.MyProjectService"/>
+        <toolWindow id="Gitlab Pipeline Preview" secondary="false" icon="GitlabCIPluginIcons.PipelinePreviewAction" anchor="right"
+                    factoryClass="com.github.fiskirton.gitlabciplugin.windows.pipeline.PipelinePreviewWindowFactory"/>
     </extensions>
 
     <applicationListeners>
         <listener class="com.github.fiskirton.gitlabciplugin.listeners.MyProjectManagerListener"
                   topic="com.intellij.openapi.project.ProjectManagerListener"/>
     </applicationListeners>
+    <actions>
+        <group id="com.github.fiskirton.gitlabciplugin.groups.ContinuousIntegrationToolbar"
+               class="com.github.fiskirton.gitlabciplugin.groups.ContinuousIntegrationToolbar"
+               text="Continuous Integration Toolbar" description="Continuous integration toolbar">
+            <add-to-group group-id="NavBarToolBar" anchor="first"/>
+            <separator/>
+            <action class="com.github.fiskirton.gitlabciplugin.actions.PipelinePreviewAction" id="org.intellij.sdk.action.GroupPopDialogAction"
+                    text="Gitlab-CI Pipeline Preview" description="Show gitlab-CI pipeline preview" icon="GitlabCIPluginIcons.PipelinePreviewAction">
+            </action>
+            <separator/>
+        </group>
+    </actions>
 </idea-plugin>
