--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
     <id>com.github.fiskirton.gitlabciplugin</id>
-    <name>GitlabCI-Workflow</name>
+    <name>GitlabCI</name>
     <vendor>fiskirton</vendor>
 
     <depends>com.intellij.modules.platform</depends>
@@ -11,6 +11,13 @@
         <projectService serviceImplementation="com.github.fiskirton.gitlabciplugin.services.MyProjectService"/>
         <toolWindow id="Gitlab Pipeline Preview" secondary="false" icon="GitlabCIPluginIcons.PipelinePreviewAction" anchor="right"
                     factoryClass="com.github.fiskirton.gitlabciplugin.windows.pipeline.PipelinePreviewWindowFactory"/>
+        <fileType name="Gitlab YAML File"
+                  implementationClass="com.github.fiskirton.gitlabciplugin.language.GitlabYamlFileType"
+                  fieldName="INSTANCE"
+                  language="GitlabYaml"
+                  extensions="gitlab-ci.yml"
+                  patterns="*.gitlab-ci*"
+        />
     </extensions>
 
     <applicationListeners>
