add properties bundle add color settings page

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -24,6 +24,8 @@
         <lang.syntaxHighlighterFactory
             language="GitlabYaml"
             implementationClass="com.gitlabci.plugin.language.highlighter.GitlabYamlSyntaxHighlighterFactory"/>
+        <colorSettingsPage
+            implementation="com.gitlabci.plugin.language.highlighter.GitlabYamlColorSettingsPage"/>
 
     </extensions>
 
