--- a/src/main/resources/messages/GitlabYamlBundle.properties
+++ b/src/main/resources/messages/GitlabYamlBundle.properties
@@ -8,5 +8,15 @@ color.settings.gitlabyaml.comment=Inline comment
 color.settings.gitlabyaml.id=ID (keyword/key)
 color.settings.gitlabyaml.int=Integer
 
+keyword.type.gitlabyaml.global=Global keyword
+keyword.type.gitlabyaml.job=Job keyword
+keyword.type.gitlabyaml.input=Job keyword possible input
+
+icon.gitlabyaml.main=/icons/main-plugin-icon.png
+icon.gitlabyaml.global-keyword=/icons/global-keyword-icon.png
+icon.gitlabyaml.job-keyword=/icons/job-keyword-icon.png
+icon.gitlabyaml.input=/icons/input-icon.png
+
+
 
 
