--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -34,6 +34,9 @@
         <lang.foldingBuilder
             language="GitlabYaml"
             implementationClass="com.gitlabci.plugin.language.editor.GitlabYamlFoldingBuilder"/>
+        <annotator
+            language="GitlabYaml"
+            implementationClass="com.gitlabci.plugin.language.editor.GitlabYamlAnnotator"/>
 
     </extensions>
 
