add documentation provider add documentation builder add html/css blocks of documentation add implement PsiNameIdentifierOwner in order to work with references

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -36,7 +36,10 @@
             implementationClass="com.gitlabci.plugin.language.editor.GitlabYamlFoldingBuilder"/>
         <annotator
             language="GitlabYaml"
-            implementationClass="com.gitlabci.plugin.language.editor.GitlabYamlAnnotator"/>
+            implementationClass="com.gitlabci.plugin.language.editor.GitlabYamlErrorAnnotator"/>
+        <lang.documentationProvider
+            language="GitlabYaml"
+            implementationClass="com.gitlabci.plugin.language.documentation.GitlabYamlDocumentationProvider"/>
 
     </extensions>
 
