--- a/src/main/resources/messages/GitlabYamlBundle.properties
+++ b/src/main/resources/messages/GitlabYamlBundle.properties
@@ -17,9 +17,7 @@ icon.gitlabyaml.global-keyword=/icons/global-keyword-icon.png
 icon.gitlabyaml.job-keyword=/icons/job-keyword-icon.png
 icon.gitlabyaml.input=/icons/input-icon.png
 
-error.gitlabyaml.incorrect-input.inline=Incorrect input for inline keyword. Please check suggestions
-error.gitlabyaml.incorrect-input.block=Incorrect input for block. Please check suggestions
-error.gitlabyaml.incorrect-input.sequence=Incorrect input for sequence. Please check suggestions
+link.gitlab.docs=https://docs.gitlab.com/ee/ci/yaml/#
 
 
 
