--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 # -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
 pluginGroup = com.github.fiskirton.gitlabciplugin
-pluginName = GitlabCI-plugin
+pluginName = GitLabCI-plugin
 # SemVer format -> https://semver.org
 pluginVersion = 0.0.1
 
@@ -12,12 +12,12 @@ pluginSinceBuild = 203
 pluginUntilBuild = 222.*
 
 # IntelliJ Platform Properties -> https://github.com/JetBrains/gradle-intellij-plugin#intellij-platform-properties
-platformType = IC
+platformType = PC
 platformVersion = 2022.1
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins = PsiViewer:221-SNAPSHOT
+platformPlugins =
 
 # Java language level used to compile sources and to generate the files for - Java 11 is required since 2020.3
 javaVersion = 11
